# Poke-AI

./: .gitignore  PokeAPI.postman_collection.json  README.md
backend/: .dockerignore  .env.example  alembic.ini  pyproject.toml  test.db
backend/app/: main.py
backend/app/api/routers/: ai.py  auth.py  collection.py  pokedex.py  teams.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/domain/models/: ai.py  auth.py  auto_team.py  compare.py  fun_facts.py  pokemon.py  team.py
backend/app/domain/repositories/: collection_repository.py  team_repository.py
backend/app/domain/services/: ai_service.py  auto_team_service.py  collection_service.py  compare_service.py  fun_facts_service.py  pokemon_service.py  recommend_service.py  team_service.py
backend/app/infra/: __init__.py  cache.py  db.py  orm.py  pokedapi.py
backend/migrations/: env.py
backend/migrations/versions/: 34b85184db17_create_users_table.py  b54d5f3332e2_add_teams_tables.py  e012786f44af_collection_items.py
frontend-streamlit/: app.py  pyproject.toml
frontend-streamlit/pages/: 1_Login.py  2_Register.py  3_Pokedex.py  4_MyCollection.py  5_Teams.py  6_AI_Vision.py  7_Compare.py
frontend-streamlit/utils/: api.py  auth.py  state.py  ui.py
mcp-server/: .env.example  main.py  pyproject.toml  server.py
